--- a/food_lab(customer)/.env
+++ b/food_lab(customer)/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=foodlab
-DB_USERNAME=minkhant
-DB_PASSWORD=HtetHtetSoe10
+DB_DATABASE=FOOD_LAB_DB
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
