--- a/food_lab(customer)/.env
+++ b/food_lab(customer)/.env
@@ -17,7 +17,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=public
+FILESYSTEM_DRIVER=spaces
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=10
@@ -41,6 +41,14 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+DO_SPACES_KEY=54IA4EVK6BXFULKGDSHJ
+DO_SPACES_SECRET=CZLUmsP77LEbqcSXhT25nlSP1/RoucQSNN+lEZZQF3w
+DO_SPACES_ENDPOINT=https://sgp1.digitaloceanspaces.com
+DO_SPACES_REGION=sgp1
+DO_SPACES_BUCKET=food-lab-filesystem
+DO_URL=https://food-lab-filesystem.sgp1.cdn.digitaloceanspaces.com
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
